Fix too widely stretched images

--- a/style.css
+++ b/style.css
@@ -102,11 +102,10 @@ img.cover-photo-5 {
 }
 
 div.expo-content img.expo-img {
-  width: 50vh;
+  max-width: 50vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-height: 60vh;
 }
 
 div.expo-content img.expo-img {
